--- a/Payroll/Payroll.csproj
+++ b/Payroll/Payroll.csproj
@@ -64,6 +64,13 @@
     <Compile Include="LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\EmployeeModel.cs" />
+    <Compile Include="PersonalizedDeductionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PersonalizedDeductionForm.Designer.cs">
+      <DependentUpon>PersonalizedDeductionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="DashboardForm.resx">
@@ -74,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PersonalizedDeductionForm.resx">
+      <DependentUpon>PersonalizedDeductionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
