--- a/Payroll/Payroll.csproj
+++ b/Payroll/Payroll.csproj
@@ -46,43 +46,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DashboardForm.cs">
+    <Compile Include="Forms\DashboardForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DashboardForm.Designer.cs">
+    <Compile Include="Forms\DashboardForm.Designer.cs">
       <DependentUpon>DashboardForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="EmployeeListForm.cs">
+    <Compile Include="Forms\EmployeeListForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EmployeeListForm.Designer.cs">
+    <Compile Include="Forms\EmployeeListForm.Designer.cs">
       <DependentUpon>EmployeeListForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoginForm.cs">
+    <Compile Include="Forms\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoginForm.Designer.cs">
+    <Compile Include="Forms\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\EmployeeModel.cs" />
-    <Compile Include="PersonalizedDeductionForm.cs">
+    <Compile Include="Forms\PersonalizedDeductionForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PersonalizedDeductionForm.Designer.cs">
+    <Compile Include="Forms\PersonalizedDeductionForm.Designer.cs">
       <DependentUpon>PersonalizedDeductionForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DashboardForm.resx">
+    <EmbeddedResource Include="Forms\DashboardForm.resx">
       <DependentUpon>DashboardForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EmployeeListForm.resx">
+    <EmbeddedResource Include="Forms\EmployeeListForm.resx">
       <DependentUpon>EmployeeListForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoginForm.resx">
+    <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PersonalizedDeductionForm.resx">
+    <EmbeddedResource Include="Forms\PersonalizedDeductionForm.resx">
       <DependentUpon>PersonalizedDeductionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
